--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,3 +1,13 @@
 .footer-wrap {
   background-color: antiquewhite;
+  position: fixed;
+  bottom: 0;
+  left: 50%;
+  translate: -50%;
+  text-align: center;
+  width: 20%;
+  height: 3rem;
+  border-top-left-radius: 30px;
+  border-top-right-radius: 30px;
+  padding-top: 1rem;
 }
