--- a/src/App.css
+++ b/src/App.css
@@ -6,5 +6,13 @@
 }
 
 .App {
-  height: 100vh;
+  min-height: 100vh;
+  background-color: #c8c8c8;
+  position: relative;
+  padding: 0 0 1rem 0;
+}
+
+.app-content-wrap {
+  margin-bottom: 5rem;
+  padding: 3rem 0 0 0;
 }
