--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -1,3 +1,20 @@
 .navbar-wrap {
-  background-color: antiquewhite;
+  background-color: #002741;
+  padding: 2rem;
+  box-shadow: 3px 3px 6px rgb(50, 50, 50);
+}
+
+.navbar-wrap p {
+  color: #ef972c;
+  width: 16.2%;
+  margin: auto;
+  font-size: 36px;
+  border: 2px solid #c8c8c8;
+  border-radius: 20px;
+  padding: 1rem;
+  box-shadow: 0px 0px 35px #d7d7d7;
+}
+
+.navbar-wrap span {
+  color: #c8c8c8;
 }
