--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Varela+Round&display=swap");
+
 *,
 *:before,
 *:after {
@@ -9,6 +11,7 @@
   min-height: 100vh;
   background-color: #c8c8c8;
   padding: 0 0 1rem 0;
+  font-family: "Varela Round", sans-serif;
 }
 
 .content-charts {
