More syling added

--- a/src/App.css
+++ b/src/App.css
@@ -9,9 +9,12 @@
 
 .App {
   min-height: 100vh;
-  background-color: #c8c8c8;
   padding: 0 0 1rem 0;
   font-family: "Varela Round", sans-serif;
+}
+
+.app-content-wrap {
+  padding-top: 25rem;
 }
 
 .content-charts {
@@ -19,5 +22,16 @@
   justify-content: space-between;
   margin: auto;
   width: 90%;
-  padding: 1rem;
+  padding: 1rem 1rem 0 1rem;
+  background-color: rgba(200, 200, 200, 0.6);
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  box-shadow: 3px 3px 12px black;
+}
+
+.App > img {
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  z-index: -1;
 }
