--- a/src/Components/BestPlatformChart/BestPlatformChart.css
+++ b/src/Components/BestPlatformChart/BestPlatformChart.css
@@ -1,18 +1,20 @@
 .platform-container {
   width: 80%;
-  padding: 2rem;
+  padding: 2rem 2rem 0 2rem;
   position: relative;
+  margin-left: 1.5rem;
 }
 
 .platform-text {
   position: absolute;
-  left: 12.7rem;
-  top: 16rem;
+  text-align: center;
+  left: 14.1rem;
+  top: 15.9rem;
   font-size: 20px;
   text-transform: uppercase;
-  box-shadow: 0 0 16px #002741;
   padding: 1rem;
   border-radius: 30px;
   background-color: #002741;
   color: #c8c8c8;
+  border: 1px solid white;
 }
