--- a/src/Components/BestGameGenreChart/BestGameGenreChart.css
+++ b/src/Components/BestGameGenreChart/BestGameGenreChart.css
@@ -8,7 +8,7 @@
   position: absolute;
   text-align: center;
   width: 17%;
-  left: 14.1rem;
+  left: 26.5%;
   top: 15.9rem;
   font-size: 20px;
   text-transform: uppercase;
