--- a/src/Components/BestPlatformChart/BestPlatformChart.css
+++ b/src/Components/BestPlatformChart/BestPlatformChart.css
@@ -8,7 +8,7 @@
 .platform-text {
   position: absolute;
   text-align: center;
-  left: 14.1rem;
+  left: 27%;
   top: 15.9rem;
   font-size: 20px;
   text-transform: uppercase;
