--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@
   height: 100vh;
   width: 100vw;
   z-index: -1;
+  object-fit: cover;
 }
 
 .app-content-wrap {
@@ -37,10 +38,58 @@
 }
 
 .gamedetails-wrap {
-  width: 80%;
+  position: relative;
+  width: 85%;
   margin: auto;
   margin-top: 7rem;
-  border: 3px solid white;
+  box-shadow: 0 0 12px 15px rgba(0, 39, 65, 0.8);
+  /* border: 0.2px solid white; */
+  border-radius: 15px;
   color: white;
   padding: 2rem;
+}
+
+.gamedetails-name {
+  color: rgb(239, 151, 44);
+  box-shadow: 0 0 9px 6px rgba(0, 39, 65, 0.9);
+  /* border: 1px solid white; */
+  border-radius: 15px;
+  padding: 0.5rem;
+  font-size: 30px;
+  font-weight: 800;
+  width: 80%;
+  margin: auto;
+  text-align: center;
+}
+
+.gamedetails-name span {
+  /* border: 1px solid white; */
+  box-shadow: 0 0 6px 4px rgba(0, 39, 65, 1);
+  padding: 0.05rem 2rem;
+  background-color: rgba(0, 39, 65, 0.5);
+  border-radius: 12px;
+}
+
+.gamedetails-container {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 11rem;
+  padding: 2rem 2rem 0rem 2rem;
+  margin-top: 4rem;
+  font-size: 20px;
+  color: rgb(239, 151, 44);
+  line-height: 2rem;
+  /* border: 1px solid white; */
+  border-radius: 15px;
+  box-shadow: 0 0 6px 6px rgba(0, 39, 65, 0.8);
+}
+
+.gamedetails-container h3 {
+  text-align: center;
+  padding: 0.5rem 3rem;
+  margin-bottom: 1rem;
+  background-color: rgba(0, 39, 65, 0.5);
+  border: 3px solid rgba(0, 39, 65, 0.7);
+  border-radius: 15px;
+  box-shadow: 0 0 6px 4px rgba(0, 39, 65, 0.8);
 }
