--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -18,7 +18,7 @@
   width: 16.1%;
   margin: auto;
   font-size: 36px;
-  border: 2px solid #c8c8c8;
+  border: 2px solid white;
   border-radius: 20px;
   padding: 1rem;
   box-shadow: 0px 0px 35px #000000;
