--- a/src/App.css
+++ b/src/App.css
@@ -30,11 +30,11 @@
   justify-content: space-between;
   margin: auto;
   width: 90%;
-  padding: 5rem 1rem 0 1rem;
-  background-color: rgba(200, 200, 200, 0.6);
+  padding: 5rem 1rem 0 2rem;
+  /* background-color: rgba(200, 200, 200, 0.3); */
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
-  box-shadow: 3px 3px 12px black;
+  box-shadow: 0 0 9px 9px rgba(0, 39, 65, 0.6);
 }
 
 .gamedetails-wrap {
@@ -43,7 +43,6 @@
   margin: auto;
   margin-top: 7rem;
   box-shadow: 0 0 12px 15px rgba(0, 39, 65, 0.8);
-  /* border: 0.2px solid white; */
   border-radius: 15px;
   color: white;
   padding: 2rem;
@@ -52,7 +51,6 @@
 .gamedetails-name {
   color: rgb(239, 151, 44);
   box-shadow: 0 0 9px 6px rgba(0, 39, 65, 0.9);
-  /* border: 1px solid white; */
   border-radius: 15px;
   padding: 0.5rem;
   font-size: 30px;
@@ -63,7 +61,7 @@
 }
 
 .gamedetails-name span {
-  /* border: 1px solid white; */
+  border: 1px solid rgb(133, 133, 133);
   box-shadow: 0 0 6px 4px rgba(0, 39, 65, 1);
   padding: 0.05rem 2rem;
   background-color: rgba(0, 39, 65, 0.5);
@@ -79,7 +77,6 @@
   font-size: 20px;
   color: rgb(239, 151, 44);
   line-height: 2rem;
-  /* border: 1px solid white; */
   border-radius: 15px;
   box-shadow: 0 0 6px 6px rgba(0, 39, 65, 0.8);
 }
@@ -89,7 +86,7 @@
   padding: 0.5rem 3rem;
   margin-bottom: 1rem;
   background-color: rgba(0, 39, 65, 0.5);
-  border: 3px solid rgba(0, 39, 65, 0.7);
+  border: 1px solid rgb(133, 133, 133);
   border-radius: 15px;
   box-shadow: 0 0 6px 4px rgba(0, 39, 65, 0.8);
 }
