--- a/src/Components/BestPlatformChart/BestPlatformChart.css
+++ b/src/Components/BestPlatformChart/BestPlatformChart.css
@@ -1,20 +1,27 @@
 .platform-container {
-  width: 80%;
-  padding: 2rem 2rem 0 2rem;
+  margin: 3rem;
+  width: 37%;
+  padding-left: 3rem;
+  padding-top: 3rem;
   position: relative;
   margin-left: 1.5rem;
+  background-color: rgba(0, 39, 65, 0.5);
+  border-radius: 30px;
+  box-shadow: 0 0 9px 6px rgba(0, 39, 65, 0.7);
+  border: 1px solid rgb(133, 133, 133);
 }
 
 .platform-text {
   position: absolute;
   text-align: center;
-  left: 27%;
-  top: 15.9rem;
+  left: 28%;
+  top: 50%;
   font-size: 20px;
   text-transform: uppercase;
   padding: 1rem;
   border-radius: 30px;
   background-color: #002741;
   color: #c8c8c8;
-  border: 1px solid white;
+  box-shadow: 0 0 1px 3px rgb(255, 255, 255);
+  /* border: 1px solid white; */
 }
