--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -31,6 +31,7 @@
 .searchgame-container {
   position: absolute;
   text-align: center;
-  left: 47.5%;
-  top: 75%;
+  left: 50%;
+  translate: -50%;
+  top: 65%;
 }
