--- a/src/App.css
+++ b/src/App.css
@@ -25,68 +25,13 @@
   padding-top: 24rem;
 }
 
-.content-charts {
+.app-content-charts {
   display: flex;
   justify-content: space-between;
   margin: auto;
   width: 90%;
   padding: 5rem 1rem 0 2rem;
-  /* background-color: rgba(200, 200, 200, 0.3); */
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
   box-shadow: 0 0 9px 9px rgba(0, 39, 65, 0.6);
-}
-
-.gamedetails-wrap {
-  position: relative;
-  width: 85%;
-  margin: auto;
-  margin-top: 7rem;
-  box-shadow: 0 0 12px 15px rgba(0, 39, 65, 0.8);
-  border-radius: 15px;
-  color: white;
-  padding: 2rem;
-}
-
-.gamedetails-name {
-  color: rgb(239, 151, 44);
-  box-shadow: 0 0 9px 6px rgba(0, 39, 65, 0.9);
-  border-radius: 15px;
-  padding: 0.5rem;
-  font-size: 30px;
-  font-weight: 800;
-  width: 80%;
-  margin: auto;
-  text-align: center;
-}
-
-.gamedetails-name span {
-  border: 1px solid rgb(133, 133, 133);
-  box-shadow: 0 0 6px 4px rgba(0, 39, 65, 1);
-  padding: 0.05rem 2rem;
-  background-color: rgba(0, 39, 65, 0.5);
-  border-radius: 12px;
-}
-
-.gamedetails-container {
-  display: flex;
-  justify-content: space-between;
-  margin: 0 11rem;
-  padding: 2rem 2rem 0rem 2rem;
-  margin-top: 4rem;
-  font-size: 20px;
-  color: rgb(239, 151, 44);
-  line-height: 2rem;
-  border-radius: 15px;
-  box-shadow: 0 0 6px 6px rgba(0, 39, 65, 0.8);
-}
-
-.gamedetails-container h3 {
-  text-align: center;
-  padding: 0.5rem 3rem;
-  margin-bottom: 1rem;
-  background-color: rgba(0, 39, 65, 0.5);
-  border: 1px solid rgb(133, 133, 133);
-  border-radius: 15px;
-  box-shadow: 0 0 6px 4px rgba(0, 39, 65, 0.8);
 }
