--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -24,6 +24,10 @@
   box-shadow: 0px 0px 35px #000000;
 }
 
+.navbar-logo:hover {
+  cursor: pointer;
+}
+
 .navbar-wrap span {
   color: #c8c8c8;
 }
@@ -34,8 +38,4 @@
   left: 50%;
   translate: -50%;
   top: 65%;
-}
-
-.navbar-wrap a {
-  cursor: pointer;
 }
