--- a/src/Components/VideoGame/VideoGame.css
+++ b/src/Components/VideoGame/VideoGame.css
@@ -51,3 +51,11 @@
   border-radius: 15px;
   box-shadow: 0 0 6px 4px rgba(0, 39, 65, 0.8);
 }
+
+.gamedetails-left-container {
+  width: 33%;
+}
+
+.gamedetails-right-container {
+  width: 33%;
+}
