--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,24 +1,20 @@
 .footer-wrap {
-  background-color: #002741;
+  /* background-color: rgba(0, 39, 65, 0.5); */
   position: fixed;
   bottom: 0;
   left: 50%;
   translate: -50%;
   text-align: center;
-  width: 15%;
-  height: 4rem;
-  border-top-left-radius: 30px;
-  border-top-right-radius: 30px;
-  padding: 1rem;
-  box-shadow: 0px 0px 6px black;
+  width: 17%;
 }
 
-.footer-wrap p {
+.footer-inner-container {
+  box-shadow: 0 1px 15px 13px rgba(0, 39, 65, 1);
   width: 93%;
   color: #ef972c;
-  font-size: 18px;
-  padding: 0.3rem;
-  border: 2px solid white;
-  border-radius: 13px;
+  font-size: 22px;
+  padding: 0.5rem;
+  border-top-left-radius: 30px;
+  border-top-right-radius: 30px;
   margin: auto;
 }
