--- a/src/Components/GamePlatformsPieChart/GamePlatformsPieChart.css
+++ b/src/Components/GamePlatformsPieChart/GamePlatformsPieChart.css
@@ -10,6 +10,7 @@
   padding: 3rem 7% 0;
   position: relative;
   background-color: rgba(0, 39, 65, 0.3);
+  border: 1px solid rgb(133, 133, 133);
   border-radius: 30px;
   box-shadow: 0 0 9px 9px rgba(0, 31, 52, 0.8);
 }
