--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -9,7 +9,8 @@
 }
 
 .footer-inner-container {
-  box-shadow: 0 1px 15px 13px rgba(0, 39, 65, 1);
+  box-shadow: 0 1px 15px 9px rgb(0, 28, 46);
+  background: rgba(0, 39, 65, 0.8);
   width: 93%;
   color: #ef972c;
   font-size: 22px;
